fix overflow and text size

--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -9,4 +9,5 @@ h1 {
   font-family: "SEGA LOGO FONT";
   font-weight: 200;
   color: #0ccac4;
+  font-size: clamp(2rem, 6vw, 3rem);
 }
